--- a/css/master.css
+++ b/css/master.css
@@ -1,15 +1,15 @@
 /* %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     GLOBAL
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video{
-    font-family: Arial, sans-serif;
-    font-size: 13px;
+*, *::before, *::after{
 }
 body{
     display: table;
     min-height: 100%;
     width: 100vw;
     margin: 0 0 30px 0; /*40px = footer height*/
+    font-family: Arial, sans-serif;
+    font-size: 13px;
 }
 a{
     text-decoration: none;
@@ -119,7 +119,7 @@ footer{
     border-top-style: solid;
     border-top-color: #CCC;
     position: absolute;
-    height: 40px;
+    height: 45px;
     padding: 0 2.5vw;
     bottom: 0;
     width: 95vw;
